Fix footer alignment bug

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ h3 {
 
 .header,
 .footer {
+  display: flex;
   min-height: 80px;
   align-items: center;
   padding: 0 15em;
@@ -183,4 +184,5 @@ ul li a {
 /* Footer styles */
 
 .footer {
+  justify-content: center;
 }
